--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,15 @@
+@import "@fontsource/marcellus";
+@import "@fontsource-variable/montserrat";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
-  .text-pretty {
-    text-wrap: pretty;
-  }
-  .text-balance {
-    text-wrap: balance;
-  }
+	.text-pretty {
+		text-wrap: pretty;
+	}
+	.text-balance {
+		text-wrap: balance;
+	}
 }
